# meow-voice

./: README.md  build_log.txt  docker-compose.yml
.github/workflows/: build.yml
client/: Dockerfile.builder  build_client.sh  index.html  mock_client.rs  package-lock.json  package.json
client/src/: App.tsx  style.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
website/: index.html
